Fix FTBFS on mips

Add ability to detect byte order from __BYTE_ORDER__ macro if defined,
fixes fail to build on MIPS.

BUG: 301027